Fix navbar bug on mobiles

--- a/src/stylesheets/mobile.scss
+++ b/src/stylesheets/mobile.scss
@@ -44,7 +44,7 @@ header a:not(#banner){
 		width: 50%;
 	}
 
-	.btn{
+	.btn, button{
 		font-size: 2em;
 		width: 100%;
 	}
